# LexxHard-SCBDriver

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  pr_reminder.yaml
launch/: scbdriver.launch
msg/: Battery.msg  BoardTemperatures.msg  Imu.msg  Led.msg  LinearActuatorControl.msg  LinearActuatorControlArray.msg  LinearActuatorServiceResponse.msg  PositionGuideVision.msg
src/: canif.cpp  canif.hpp  receiver.cpp  receiver_actuator.cpp  receiver_actuator.hpp  receiver_bmu.cpp  receiver_bmu.hpp  receiver_board.cpp  receiver_board.hpp  receiver_dfu.cpp  receiver_dfu.hpp  receiver_gpio.cpp  receiver_gpio.hpp  receiver_imu.cpp  receiver_imu.hpp  receiver_pgv.cpp  receiver_pgv.hpp  receiver_tof.cpp  receiver_tof.hpp  receiver_tug_encoder.cpp  receiver_tug_encoder.hpp  receiver_uss.cpp  receiver_uss.hpp  sender.cpp  sender_actuator.cpp  sender_actuator.hpp  sender_board.cpp  sender_board.hpp  sender_dfu.cpp  sender_dfu.hpp  sender_gpio.cpp  sender_gpio.hpp  sender_led.cpp  sender_led.hpp  sender_pgv.cpp  sender_pgv.hpp  uartif.cpp  uartif.hpp  updater.cpp
src/scbdriver/: CMakeLists.txt  package.xml
src/scbdriver/msg/: Battery.msg  Imu.msg  Led.msg  LinearActuatorControl.msg  LinearActuatorControlArray.msg  PositionGuideVision.msg
src/scbdriver/src/: canif.cpp  canif.hpp  receiver.cpp  receiver_actuator.cpp  receiver_actuator.hpp  receiver_bmu.cpp  receiver_bmu.hpp  receiver_board.cpp  receiver_board.hpp  receiver_dfu.hpp  receiver_imu.cpp  receiver_imu.hpp  receiver_pgv.cpp  receiver_pgv.hpp  receiver_uss.cpp  receiver_uss.hpp  sender.cpp  sender_actuator.cpp  sender_actuator.hpp  sender_board.cpp  sender_board.hpp  sender_gpio.cpp  sender_gpio.hpp  sender_led.cpp  sender_led.hpp  sender_pgv.cpp  sender_pgv.hpp  updater.cpp
src/scbdriver/srv/: InitLinearActuator.srv
srv/: InitLinearActuator.srv  LinearActuatorLocation.srv
util/: setup_zlac8030.sh  test_motor.sh
util/etc/systemd/network/: 50-can.network
util/scripts/: setup_zlac8030.sh  test_motor.sh
util/workspace/: .gitignore  Dockerfile  docker-compose.yml
